test/extern/require/errorNotAtModuleScope/requireNotAtModuleScope2.good
requireNotAtModuleScope2.chpl:3: error: cannot use 'require' on a Chapel source file not at module scope
