test/extern/require/errorNotAtModuleScope/requireNotAtModuleScope2.chpl
record R {
  proc foo() {
    require "dummyFile.chpl"; // should error
  }
}
